--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,6 @@ eureka.instance.prefer-ip-address= true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 
+spring.application.name=TEST-SERVER
+
 
